@@ -2,7 +2,7 @@ Source: wzdftpd
 Section: net
 Priority: optional
 Maintainer: Pierre Chifflier <chifflier@cpe.fr>
-Build-Depends: debhelper (>= 4.0.0), libgnutls-dev | libssl-dev, zlib1g-dev, tcl8.4-dev, libperl-dev, libpam0g-dev, libmysqlclient15-dev | libmysqlclient14-dev, libpq-dev, flex, docbook-utils, dpatch, pkg-config
+Build-Depends: debhelper (>= 4.0.0), libgnutls-dev | libssl-dev, zlib1g-dev, tcl8.4-dev, libperl-dev, libpam0g-dev, libmysqlclient15-dev | libmysqlclient14-dev, libpq-dev, flex, docbook-utils, dpatch
 Standards-Version: 3.6.2
 
 Package: wzdftpd
